tests/baselines/reference/classIndexer4.errors.txt
==== tests/cases/compiler/classIndexer4.ts (1 errors) ====
    class C123 {
        [s: string]: number;
        constructor() {
        }
    }
    
    interface D123 extends C123 {
        x: number;
        y: string;
        ~~~~~~~~~
!!! error TS2171: All named properties must be assignable to string indexer type 'number'.
    }